Add permissions for GitHub releases

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -26,6 +26,8 @@ jobs:
   build-android:
     name: Build Android
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout source code from fulgul-source
