--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -17,6 +17,8 @@ jobs:
   build-windows-x64:
     name: Build Windows 64-bit
     runs-on: windows-latest
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout source code from fulgul-source
